Intégration des probabilités d'outils popup ou de 0 day

--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -202,22 +202,136 @@
      "output_type": "stream",
      "text": [
       "1:admin(domain):0\n",
+      "[(0,), (1,)]\n",
+      "[[0.99 0.2 ]\n",
+      " [0.   0.  ]]\n",
+      "[(0,), (1,)]\n",
+      "[(0, 0)]\n",
+      "c= []\n",
+      "q[c] = []\n",
+      "pop= [0.01]\n",
+      "[(0, 1)]\n",
+      "c= [0]\n",
+      "q[c] = [0.999]\n",
+      "pop= []\n",
       "4:dcSync(domain):0\n",
       "4:dcSync(domain):0\n",
+      "[(0, 0), (0, 1), (1, 0), (1, 1)]\n",
+      "[[0.99 0.2  0.2  0.04]\n",
+      " [0.   0.   0.   0.  ]]\n",
+      "[(0,), (1,)]\n",
+      "[(0, 0)]\n",
+      "c= []\n",
+      "q[c] = []\n",
+      "pop= [0.01]\n",
+      "[(0, 1)]\n",
+      "c= [0]\n",
+      "q[c] = [0.999]\n",
+      "pop= []\n",
       "7:passTheTicket(domain):0\n",
+      "[(0,), (1,)]\n",
+      "[[0.99 0.2 ]\n",
+      " [0.   0.  ]]\n",
+      "[(0,), (1,)]\n",
+      "[(0, 0)]\n",
+      "c= []\n",
+      "q[c] = []\n",
+      "pop= [0.01]\n",
+      "[(0, 1)]\n",
+      "c= [0]\n",
+      "q[c] = [0.90761]\n",
+      "pop= []\n",
       "10:validCredentials(domain):0\n",
+      "[(0,), (1,)]\n",
+      "[[0.99 0.2 ]\n",
+      " [0.   0.  ]]\n",
       "11:RULE 6 (valid credentials may be found):0.8\n",
+      "[(0,), (1,)]\n",
+      "[(0, 0)]\n",
+      "c= []\n",
+      "q[c] = []\n",
+      "pop= [0.01]\n",
+      "[(0, 1)]\n",
+      "c= [0]\n",
+      "q[c] = [1.]\n",
+      "pop= []\n",
+      "[(0,), (1,)]\n",
+      "[(0, 0)]\n",
+      "c= []\n",
+      "q[c] = []\n",
+      "pop= [0.01]\n",
+      "[(0, 1)]\n",
+      "c= [0]\n",
+      "q[c] = [0.0547]\n",
+      "pop= []\n",
       "15:coerceSMB(domain):0\n",
+      "[(0,), (1,)]\n",
+      "[[0.99 0.2 ]\n",
+      " [0.   0.  ]]\n",
+      "[(0,), (1,)]\n",
+      "[(0, 0)]\n",
+      "c= []\n",
+      "q[c] = []\n",
+      "pop= [0.01]\n",
+      "[(0, 1)]\n",
+      "c= [0]\n",
+      "q[c] = [0.90617]\n",
+      "pop= []\n",
       "18:admin(host):0\n",
       "18:admin(host):0\n",
+      "[(0, 0), (0, 1), (1, 0), (1, 1)]\n",
+      "[[0.99 0.2  0.2  0.04]\n",
+      " [0.   0.   0.   0.  ]]\n",
+      "[(0,), (1,)]\n",
+      "[(0, 0)]\n",
+      "c= []\n",
+      "q[c] = []\n",
+      "pop= [0.01]\n",
+      "[(0, 1)]\n",
+      "c= [0]\n",
+      "q[c] = [0.999]\n",
+      "pop= []\n",
       "21:coerceHTTP(host):0\n",
-      "26:lowAccess(host):0\n"
+      "[(0,), (1,)]\n",
+      "[[0.99 0.2 ]\n",
+      " [0.   0.  ]]\n",
+      "[(0,), (1,)]\n",
+      "[(0, 0)]\n",
+      "c= []\n",
+      "q[c] = []\n",
+      "pop= [0.01]\n",
+      "[(0, 1)]\n",
+      "c= [0]\n",
+      "q[c] = [0.07634]\n",
+      "pop= []\n",
+      "[(0,), (1,)]\n",
+      "[(0, 0)]\n",
+      "c= []\n",
+      "q[c] = []\n",
+      "pop= [0.01]\n",
+      "[(0, 1)]\n",
+      "c= [0]\n",
+      "q[c] = [0.97484]\n",
+      "pop= []\n",
+      "26:lowAccess(host):0\n",
+      "[(0,), (1,)]\n",
+      "[[0.99 0.2 ]\n",
+      " [0.   0.  ]]\n",
+      "[(0,), (1,)]\n",
+      "[(0, 0)]\n",
+      "c= []\n",
+      "q[c] = []\n",
+      "pop= [0.01]\n",
+      "[(0, 1)]\n",
+      "c= [0]\n",
+      "q[c] = [0.9756]\n",
+      "pop= []\n"
      ]
     }
    ],
    "source": [
     "# Name of the simulation\n",
-    "simulation = \"selection\"\n",
+    "simulation = \"selection_pour présentation\"\n",
     "\n",
     "# Constante for probability one \n",
     "MAX = 0.999\n",
@@ -249,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +385,90 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[(0, 0), (0, 1), (1, 0), (1, 1)]\n",
+      "[[0.99 0.   0.1  0.  ]\n",
+      " [0.   0.   0.   0.  ]]\n",
+      "[(0, 0), (0, 1), (1, 0), (1, 1)]\n",
+      "[[0.99 0.1  0.9  0.09]\n",
+      " [0.   0.   0.   0.  ]]\n",
+      "[(0, 0), (0, 1), (1, 0), (1, 1)]\n",
+      "[[0.99 0.   0.   0.  ]\n",
+      " [0.   0.   0.   0.  ]]\n",
+      "[(0, 0), (0, 1), (1, 0), (1, 1)]\n",
+      "[[0.99 0.   0.1  0.  ]\n",
+      " [0.   0.   0.   0.  ]]\n",
+      "[(0, 0, 0, 0), (0, 0, 0, 1), (0, 0, 1, 0), (0, 0, 1, 1), (0, 1, 0, 0), (0, 1, 0, 1), (0, 1, 1, 0), (0, 1, 1, 1), (1, 0, 0, 0), (1, 0, 0, 1), (1, 0, 1, 0), (1, 0, 1, 1), (1, 1, 0, 0), (1, 1, 0, 1), (1, 1, 1, 0), (1, 1, 1, 1)]\n",
+      "[(0, 0), (1, 0), (2, 0), (3, 0)]\n",
+      "c= []\n",
+      "q[c] = []\n",
+      "pop= [0.01 0.01 0.01 0.01]\n",
+      "[(0, 0), (1, 0), (2, 0), (3, 1)]\n",
+      "c= [3]\n",
+      "q[c] = [0.999]\n",
+      "pop= [0.01 0.01 0.01]\n",
+      "[(0, 0), (1, 0), (2, 1), (3, 0)]\n",
+      "c= [2]\n",
+      "q[c] = [0.999]\n",
+      "pop= [0.01 0.01 0.01]\n",
+      "[(0, 0), (1, 0), (2, 1), (3, 1)]\n",
+      "c= [2, 3]\n",
+      "q[c] = [0.999 0.999]\n",
+      "pop= [0.01 0.01]\n",
+      "[(0, 0), (1, 1), (2, 0), (3, 0)]\n",
+      "c= [1]\n",
+      "q[c] = [0.999]\n",
+      "pop= [0.01 0.01 0.01]\n",
+      "[(0, 0), (1, 1), (2, 0), (3, 1)]\n",
+      "c= [1, 3]\n",
+      "q[c] = [0.999 0.999]\n",
+      "pop= [0.01 0.01]\n",
+      "[(0, 0), (1, 1), (2, 1), (3, 0)]\n",
+      "c= [1, 2]\n",
+      "q[c] = [0.999 0.999]\n",
+      "pop= [0.01 0.01]\n",
+      "[(0, 0), (1, 1), (2, 1), (3, 1)]\n",
+      "c= [1, 2, 3]\n",
+      "q[c] = [0.999 0.999 0.999]\n",
+      "pop= [0.01]\n",
+      "[(0, 1), (1, 0), (2, 0), (3, 0)]\n",
+      "c= [0]\n",
+      "q[c] = [0.999]\n",
+      "pop= [0.01 0.01 0.01]\n",
+      "[(0, 1), (1, 0), (2, 0), (3, 1)]\n",
+      "c= [0, 3]\n",
+      "q[c] = [0.999 0.999]\n",
+      "pop= [0.01 0.01]\n",
+      "[(0, 1), (1, 0), (2, 1), (3, 0)]\n",
+      "c= [0, 2]\n",
+      "q[c] = [0.999 0.999]\n",
+      "pop= [0.01 0.01]\n",
+      "[(0, 1), (1, 0), (2, 1), (3, 1)]\n",
+      "c= [0, 2, 3]\n",
+      "q[c] = [0.999 0.999 0.999]\n",
+      "pop= [0.01]\n",
+      "[(0, 1), (1, 1), (2, 0), (3, 0)]\n",
+      "c= [0, 1]\n",
+      "q[c] = [0.999 0.999]\n",
+      "pop= [0.01 0.01]\n",
+      "[(0, 1), (1, 1), (2, 0), (3, 1)]\n",
+      "c= [0, 1, 3]\n",
+      "q[c] = [0.999 0.999 0.999]\n",
+      "pop= [0.01]\n",
+      "[(0, 1), (1, 1), (2, 1), (3, 0)]\n",
+      "c= [0, 1, 2]\n",
+      "q[c] = [0.999 0.999 0.999]\n",
+      "pop= [0.01]\n",
+      "[(0, 1), (1, 1), (2, 1), (3, 1)]\n",
+      "c= [0, 1, 2, 3]\n",
+      "q[c] = [0.999 0.999 0.999 0.999]\n",
+      "pop= []\n",
+      "[(0,), (1,)]\n",
+      "[[0.99 0.3 ]\n",
+      " [0.   0.  ]]\n",
       "Unknown\n",
+      "[(0,), (1,)]\n",
+      "[[0.99 0.3 ]\n",
+      " [0.   0.  ]]\n",
       "Unknown\n",
       "Unknown\n"
      ]
@@ -343,22 +540,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BayesianNetwork with 39 nodes and 57 edges\n",
+      "BayesianNetwork with 39 nodes and 57 edges\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\factors\\discrete\\DiscreteFactor.py:796: RuntimeWarning: invalid value encountered in divide\n",
+      "  phi.values = phi.values / phi1.values\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "BayesianNetwork with 19 nodes and 20 edges\n"
      ]
     }
    ],
    "source": [
-    "evidence = {19 : 1}\n",
+    "evidence = {14 : 1}\n",
     "with open(output_file, 'w') as f:\n",
-    "    f.write(to_dot(BAG, nodes, evidence, display_kts=False))\n",
+    "    f.write(to_dot(BAG, nodes, evidence, display_kts=True))\n",
     "with open(path / (\"BAG_ref\" + \".dot\"), 'w') as f:\n",
     "    f.write(to_dot(BAG_ref, nodes, evidence))"
    ]
@@ -374,49 +585,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------+------------------+\n",
-      "| impacketP    |   phi(impacketP) |\n",
-      "+==============+==================+\n",
-      "| impacketP(0) |           0.5495 |\n",
-      "+--------------+------------------+\n",
-      "| impacketP(1) |           0.4505 |\n",
-      "+--------------+------------------+\n"
+      "+------+----------------------+---------------------+\n",
+      "| 2    | 2(0)                 | 2(1)                |\n",
+      "+------+----------------------+---------------------+\n",
+      "| 1(0) | 0.99                 | 0.19999999999999996 |\n",
+      "+------+----------------------+---------------------+\n",
+      "| 1(1) | 0.010000000000000009 | 0.8                 |\n",
+      "+------+----------------------+---------------------+\n"
      ]
     }
    ],
    "source": [
     "tab = BeliefPropagation(BAG).query(['impacketP'], evidence=evidence)\n",
-    "print(tab)"
+    "print(BAG.get_cpds(1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "list.remove(x): x not in list",
+     "ename": "NameError",
+     "evalue": "name 'nnn' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[72], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# print(tab)\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(nnn)\n\u001b[1;32m----> 3\u001b[0m \u001b[43mnnn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(nnn)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(tab\u001b[38;5;241m.\u001b[39mmarginalize(nnn, inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m))\n",
-      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# print(tab)\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mnnn\u001b[49m)\n\u001b[0;32m      3\u001b[0m nnn\u001b[38;5;241m.\u001b[39mremove(\u001b[38;5;241m3\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(nnn)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'nnn' is not defined"
      ]
     }
    ],
