Un peu de netoyage dans le python

--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -14,21 +14,15 @@
    "outputs": [],
    "source": [
     "import networkx as nx\n",
-    "import os\n",
     "import csv\n",
     "import re\n",
     "import numpy as np\n",
-    "import concurrent.futures\n",
     "from pathlib import Path\n",
-    "from joblib import Parallel, delayed\n",
-    "from BAG_Code_tw520.BayesianAttackGraphForCVSS import parse_dot\n",
-    "from Threat_Inteligence.CWE_tree.parse import parse_xml\n",
-    "from BAG_Code_tw520.BayesianAttackGraphForCVSS import change_prob\n",
+    "from BAG_Code_tw520.BayesianAttackGraph import parse_dot\n",
     "from BAG_Code_tw520.createANDtable import create_AND_table\n",
     "from BAG_Code_tw520.createORtable import create_OR_table\n",
     "\n",
     "from pgmpy.inference.ExactInference import BeliefPropagation\n",
-    "from pgmpy.models import BayesianNetwork\n",
     "from pgmpy.factors.discrete import TabularCPD"
    ]
   },
@@ -45,115 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX = 0.999\n",
+    "ONE = 0.999\n",
     "\n",
-    "def parse_dot(dot_string):\n",
-    "    nodes = {}\n",
-    "    edges = []\n",
-    "\n",
-    "    # Définir une expression régulière pour extraire les informations de chaque nœud\n",
-    "    # node_pattern = re.compile(\"(\\d+)\")\n",
-    "    node_pattern = re.compile(r'\\s+(\\d+)\\s+\\[\\s*label=\"([^\"]+)\"\\s+shape=\"([^\"]+)\"\\s+CVE=\"([^\"]+)\"\\s*\\];')\n",
-    "\n",
-    "    # Définir une expression régulière pour extraire les arêtes\n",
-    "    edge_pattern = re.compile(r'\\s+(\\d+)\\s*->\\s*(\\d+)\\s+\\[\\s+color=\"[^\"]+\"\\s*\\];')\n",
-    "\n",
-    "    # Parcourir chaque ligne du texte\n",
-    "    for line in dot_string.split('\\n'):\n",
-    "        # Vérifier si la ligne correspond à un nœud\n",
-    "        node_match = node_pattern.match(line)\n",
-    "        # Vérifier si la ligne correspond à une arête\n",
-    "        edge_match = edge_pattern.match(line)\n",
-    "        if node_match:\n",
-    "            node_id = int(node_match.group(1))\n",
-    "            label = node_match.group(2)\n",
-    "            shape = node_match.group(3)\n",
-    "            node_type = 'AND' if shape == \"ellipse\" else 'OR'\n",
-    "            cveID = node_match.group(4).strip(\"\\'\")\n",
-    "            nodes[node_id] = {'label': label, 'type': node_type, 'CVE': cveID, 'shape': shape}\n",
-    "        elif edge_match:\n",
-    "            source = int(edge_match.group(1))\n",
-    "            target = int(edge_match.group(2))\n",
-    "            edges.append((source, target))\n",
-    "    model = BayesianNetwork(edges)\n",
-    "    # Read the probabilities for each CVE\n",
-    "    cvss_dict = {}\n",
-    "    with open('./Threat_Inteligence/epss_scores-2024-04-25.csv', mode='r') as csvfile:\n",
-    "        reader = csv.DictReader(csvfile)\n",
-    "        for row in reader:\n",
-    "            cvss_dict[row['cve']] = row['epss']\n",
-    "    for elem in nodes.items():\n",
-    "        r = elem[1]['type'] == 'OR'\n",
-    "        #We look for the source nodes\n",
-    "        source = []\n",
-    "        probs = []\n",
-    "        for edge in edges:\n",
-    "            if edge[1] == elem[0]:\n",
-    "                source.append(edge[0])\n",
-    "                if elem[1]['CVE'] in cvss_dict.keys():\n",
-    "                    probs.append(float(cvss_dict[elem[1]['CVE']]))\n",
-    "                else:\n",
-    "                    # We use the probability associated to the rule if not null\n",
-    "                    tmp = float(nodes[edge[0]]['label'].split(':')[2])\n",
-    "                    if tmp != 0:\n",
-    "                        print(elem[1]['label'])\n",
-    "                        probs.append(float(tmp))\n",
-    "                    else: \n",
-    "                        probs.append(MAX)\n",
-    "        npa = len(source)\n",
-    "        #We draw the probability from the distribution of CVSS scores\n",
-    "        if r:\n",
-    "            cpt = create_OR_table(probs)\n",
-    "        else:\n",
-    "            cpt = create_AND_table(probs)\n",
-    "        if npa:\n",
-    "            cpd = TabularCPD(elem[0], 2, cpt.T, source, evidence_card=2*np.ones(npa))\n",
-    "        else:\n",
-    "            cpd = TabularCPD(elem[0], 2, cpt.T)\n",
-    "        #Insert the conditional probability table into the Bayesian Network object\n",
-    "        model.add_cpds(cpd)\n",
-    "    return model, edges, nodes\n",
-    "\n",
-    "\n",
-    "def change_prob(BAG, edges, nodes, cwe_dict, Gcwe, prop0, factor, evidence_loc):\n",
-    "    src_node = set()\n",
-    "    for c_node in evidence_loc:\n",
-    "        src_node.update(get_all_ancestors(BAG, c_node))\n",
-    "    dst_node = set(nodes) - src_node\n",
-    "    for dst_n in dst_node:\n",
-    "        dst_k = dst_n\n",
-    "        dst_cve = nodes[dst_k]['CVE']\n",
-    "        if dst_cve == \"null\":\n",
-    "            continue\n",
-    "        print(dst_cve)\n",
-    "        dst_cwe = cwe_dict[dst_cve]\n",
-    "        if dst_cwe != 'NVD-CWE-Other' and dst_cwe != \"NVD-CWE-noinfo\":\n",
-    "            for e in edges:\n",
-    "                if e[1] == dst_k:\n",
-    "                    source = [e[0]]\n",
-    "                    new_prob = BAG.get_cpds(dst_k).values[1][1]\n",
-    "                    for s in src_node:\n",
-    "                        src_k = s\n",
-    "                        src_cve = nodes[src_k]['CVE']\n",
-    "                        if src_cve == \"null\":\n",
-    "                            continue\n",
-    "                        src_cwe = cwe_dict[src_cve]\n",
-    "                        if src_cwe != 'NVD-CWE-Other' and src_cwe != \"NVD-CWE-noinfo\":\n",
-    "                            dist = nx.shortest_path_length(Gcwe, source=src_cwe.split('-')[1], target=dst_cwe.split('-')[1])\n",
-    "                            print(\"CVE source : \" + nodes[src_k]['label'])\n",
-    "                            tmp_prob = factor**(dist+1) * prop0.query([src_k],evidence=evidence_loc).values[1]\n",
-    "                            print(222222222222222222222222222222)\n",
-    "                            new_prob = tmp_prob + new_prob - new_prob*tmp_prob\n",
-    "                    props = create_OR_table([new_prob])\n",
-    "                    BAG.remove_cpds(dst_k)\n",
-    "                    BAG.add_cpds(TabularCPD(dst_k, 2, props.T, source, evidence_card=2*np.ones(1)))\n",
-    "\n",
-    "def get_all_ancestors(BAG, node, ancestors=set()):\n",
-    "    parents = BAG.get_parents(node)\n",
-    "    ancestors.update(parents)\n",
-    "    for p in parents:\n",
-    "        get_all_ancestors(BAG, p, ancestors)\n",
-    "    return ancestors\n",
     "\n",
     "def to_dot(BAG, nodes, evidences, display_kts=False):\n",
     "    dot = 'digraph G {\\n'\n",
@@ -196,155 +83,22 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1:admin(domain):0\n",
-      "[(0,), (1,)]\n",
-      "[[0.99 0.2 ]\n",
-      " [0.   0.  ]]\n",
-      "[(0,), (1,)]\n",
-      "[(0, 0)]\n",
-      "c= []\n",
-      "q[c] = []\n",
-      "pop= [0.01]\n",
-      "[(0, 1)]\n",
-      "c= [0]\n",
-      "q[c] = [0.999]\n",
-      "pop= []\n",
-      "4:dcSync(domain):0\n",
-      "4:dcSync(domain):0\n",
-      "[(0, 0), (0, 1), (1, 0), (1, 1)]\n",
-      "[[0.99 0.2  0.2  0.04]\n",
-      " [0.   0.   0.   0.  ]]\n",
-      "[(0,), (1,)]\n",
-      "[(0, 0)]\n",
-      "c= []\n",
-      "q[c] = []\n",
-      "pop= [0.01]\n",
-      "[(0, 1)]\n",
-      "c= [0]\n",
-      "q[c] = [0.999]\n",
-      "pop= []\n",
-      "7:passTheTicket(domain):0\n",
-      "[(0,), (1,)]\n",
-      "[[0.99 0.2 ]\n",
-      " [0.   0.  ]]\n",
-      "[(0,), (1,)]\n",
-      "[(0, 0)]\n",
-      "c= []\n",
-      "q[c] = []\n",
-      "pop= [0.01]\n",
-      "[(0, 1)]\n",
-      "c= [0]\n",
-      "q[c] = [0.90761]\n",
-      "pop= []\n",
-      "10:validCredentials(domain):0\n",
-      "[(0,), (1,)]\n",
-      "[[0.99 0.2 ]\n",
-      " [0.   0.  ]]\n",
-      "11:RULE 6 (valid credentials may be found):0.8\n",
-      "[(0,), (1,)]\n",
-      "[(0, 0)]\n",
-      "c= []\n",
-      "q[c] = []\n",
-      "pop= [0.01]\n",
-      "[(0, 1)]\n",
-      "c= [0]\n",
-      "q[c] = [1.]\n",
-      "pop= []\n",
-      "[(0,), (1,)]\n",
-      "[(0, 0)]\n",
-      "c= []\n",
-      "q[c] = []\n",
-      "pop= [0.01]\n",
-      "[(0, 1)]\n",
-      "c= [0]\n",
-      "q[c] = [0.0547]\n",
-      "pop= []\n",
-      "15:coerceSMB(domain):0\n",
-      "[(0,), (1,)]\n",
-      "[[0.99 0.2 ]\n",
-      " [0.   0.  ]]\n",
-      "[(0,), (1,)]\n",
-      "[(0, 0)]\n",
-      "c= []\n",
-      "q[c] = []\n",
-      "pop= [0.01]\n",
-      "[(0, 1)]\n",
-      "c= [0]\n",
-      "q[c] = [0.90617]\n",
-      "pop= []\n",
-      "18:admin(host):0\n",
-      "18:admin(host):0\n",
-      "[(0, 0), (0, 1), (1, 0), (1, 1)]\n",
-      "[[0.99 0.2  0.2  0.04]\n",
-      " [0.   0.   0.   0.  ]]\n",
-      "[(0,), (1,)]\n",
-      "[(0, 0)]\n",
-      "c= []\n",
-      "q[c] = []\n",
-      "pop= [0.01]\n",
-      "[(0, 1)]\n",
-      "c= [0]\n",
-      "q[c] = [0.999]\n",
-      "pop= []\n",
-      "21:coerceHTTP(host):0\n",
-      "[(0,), (1,)]\n",
-      "[[0.99 0.2 ]\n",
-      " [0.   0.  ]]\n",
-      "[(0,), (1,)]\n",
-      "[(0, 0)]\n",
-      "c= []\n",
-      "q[c] = []\n",
-      "pop= [0.01]\n",
-      "[(0, 1)]\n",
-      "c= [0]\n",
-      "q[c] = [0.07634]\n",
-      "pop= []\n",
-      "[(0,), (1,)]\n",
-      "[(0, 0)]\n",
-      "c= []\n",
-      "q[c] = []\n",
-      "pop= [0.01]\n",
-      "[(0, 1)]\n",
-      "c= [0]\n",
-      "q[c] = [0.97484]\n",
-      "pop= []\n",
-      "26:lowAccess(host):0\n",
-      "[(0,), (1,)]\n",
-      "[[0.99 0.2 ]\n",
-      " [0.   0.  ]]\n",
-      "[(0,), (1,)]\n",
-      "[(0, 0)]\n",
-      "c= []\n",
-      "q[c] = []\n",
-      "pop= [0.01]\n",
-      "[(0, 1)]\n",
-      "c= [0]\n",
-      "q[c] = [0.9756]\n",
-      "pop= []\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Name of the simulation\n",
-    "simulation = \"selection_pour présentation\"\n",
+    "simulation = \"selection\"\n",
     "\n",
     "# Constante for probability one \n",
     "MAX = 0.999\n",
     "\n",
     "# Path to the folder containing the tree\n",
-    "# path = os.path.join(os.getcwd(), \"/ImperialWork/Personnal_simulations/output_\" + simulation + \"/strongly_connected_components/\")\n",
     "path = Path.cwd() / (\"Personnal_simulations/output_\" + simulation + \"/strongly_connected_components/\")\n",
     "file_name = \"ag-nocycles.dot\"\n",
     "path_to_dot = path / file_name\n",
     "output_file = path / (file_name[:-4] + \"_colored.dot\")\n",
     "\n",
     "# We all read from the file, adding probabilities in the same time\n",
-    "BAG, edges, nodes = parse_dot(open(path_to_dot, 'r').read())\n",
+    "BAG, edges, nodes = parse_dot(open(path_to_dot, 'r').read(), ONE)\n",
     "\n",
     "# This is the reference BAG, before the attacker has compromised any node\n",
     "BAG_ref = BAG.copy()\n",
@@ -385,90 +139,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, 0), (0, 1), (1, 0), (1, 1)]\n",
-      "[[0.99 0.   0.1  0.  ]\n",
-      " [0.   0.   0.   0.  ]]\n",
-      "[(0, 0), (0, 1), (1, 0), (1, 1)]\n",
-      "[[0.99 0.1  0.9  0.09]\n",
-      " [0.   0.   0.   0.  ]]\n",
-      "[(0, 0), (0, 1), (1, 0), (1, 1)]\n",
-      "[[0.99 0.   0.   0.  ]\n",
-      " [0.   0.   0.   0.  ]]\n",
-      "[(0, 0), (0, 1), (1, 0), (1, 1)]\n",
-      "[[0.99 0.   0.1  0.  ]\n",
-      " [0.   0.   0.   0.  ]]\n",
-      "[(0, 0, 0, 0), (0, 0, 0, 1), (0, 0, 1, 0), (0, 0, 1, 1), (0, 1, 0, 0), (0, 1, 0, 1), (0, 1, 1, 0), (0, 1, 1, 1), (1, 0, 0, 0), (1, 0, 0, 1), (1, 0, 1, 0), (1, 0, 1, 1), (1, 1, 0, 0), (1, 1, 0, 1), (1, 1, 1, 0), (1, 1, 1, 1)]\n",
-      "[(0, 0), (1, 0), (2, 0), (3, 0)]\n",
-      "c= []\n",
-      "q[c] = []\n",
-      "pop= [0.01 0.01 0.01 0.01]\n",
-      "[(0, 0), (1, 0), (2, 0), (3, 1)]\n",
-      "c= [3]\n",
-      "q[c] = [0.999]\n",
-      "pop= [0.01 0.01 0.01]\n",
-      "[(0, 0), (1, 0), (2, 1), (3, 0)]\n",
-      "c= [2]\n",
-      "q[c] = [0.999]\n",
-      "pop= [0.01 0.01 0.01]\n",
-      "[(0, 0), (1, 0), (2, 1), (3, 1)]\n",
-      "c= [2, 3]\n",
-      "q[c] = [0.999 0.999]\n",
-      "pop= [0.01 0.01]\n",
-      "[(0, 0), (1, 1), (2, 0), (3, 0)]\n",
-      "c= [1]\n",
-      "q[c] = [0.999]\n",
-      "pop= [0.01 0.01 0.01]\n",
-      "[(0, 0), (1, 1), (2, 0), (3, 1)]\n",
-      "c= [1, 3]\n",
-      "q[c] = [0.999 0.999]\n",
-      "pop= [0.01 0.01]\n",
-      "[(0, 0), (1, 1), (2, 1), (3, 0)]\n",
-      "c= [1, 2]\n",
-      "q[c] = [0.999 0.999]\n",
-      "pop= [0.01 0.01]\n",
-      "[(0, 0), (1, 1), (2, 1), (3, 1)]\n",
-      "c= [1, 2, 3]\n",
-      "q[c] = [0.999 0.999 0.999]\n",
-      "pop= [0.01]\n",
-      "[(0, 1), (1, 0), (2, 0), (3, 0)]\n",
-      "c= [0]\n",
-      "q[c] = [0.999]\n",
-      "pop= [0.01 0.01 0.01]\n",
-      "[(0, 1), (1, 0), (2, 0), (3, 1)]\n",
-      "c= [0, 3]\n",
-      "q[c] = [0.999 0.999]\n",
-      "pop= [0.01 0.01]\n",
-      "[(0, 1), (1, 0), (2, 1), (3, 0)]\n",
-      "c= [0, 2]\n",
-      "q[c] = [0.999 0.999]\n",
-      "pop= [0.01 0.01]\n",
-      "[(0, 1), (1, 0), (2, 1), (3, 1)]\n",
-      "c= [0, 2, 3]\n",
-      "q[c] = [0.999 0.999 0.999]\n",
-      "pop= [0.01]\n",
-      "[(0, 1), (1, 1), (2, 0), (3, 0)]\n",
-      "c= [0, 1]\n",
-      "q[c] = [0.999 0.999]\n",
-      "pop= [0.01 0.01]\n",
-      "[(0, 1), (1, 1), (2, 0), (3, 1)]\n",
-      "c= [0, 1, 3]\n",
-      "q[c] = [0.999 0.999 0.999]\n",
-      "pop= [0.01]\n",
-      "[(0, 1), (1, 1), (2, 1), (3, 0)]\n",
-      "c= [0, 1, 2]\n",
-      "q[c] = [0.999 0.999 0.999]\n",
-      "pop= [0.01]\n",
-      "[(0, 1), (1, 1), (2, 1), (3, 1)]\n",
-      "c= [0, 1, 2, 3]\n",
-      "q[c] = [0.999 0.999 0.999 0.999]\n",
-      "pop= []\n",
-      "[(0,), (1,)]\n",
-      "[[0.99 0.3 ]\n",
-      " [0.   0.  ]]\n",
       "Unknown\n",
-      "[(0,), (1,)]\n",
-      "[[0.99 0.3 ]\n",
-      " [0.   0.  ]]\n",
       "Unknown\n",
       "Unknown\n"
      ]
@@ -542,30 +213,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BayesianNetwork with 39 nodes and 57 edges\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\factors\\discrete\\DiscreteFactor.py:796: RuntimeWarning: invalid value encountered in divide\n",
-      "  phi.values = phi.values / phi1.values\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BayesianNetwork with 19 nodes and 20 edges\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "evidence = {14 : 1}\n",
     "with open(output_file, 'w') as f:\n",
@@ -585,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
