--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,7 @@
     "from BAG_Code_tw520.BayesianAttackGraph import parse_dot\n",
     "from BAG_Code_tw520.createANDtable import create_AND_table\n",
     "from BAG_Code_tw520.createORtable import create_OR_table\n",
+    "from BAG_Code_tw520.Tools_tree import tokenizer, Parser\n",
     "\n",
     "from pgmpy.inference.ExactInference import BeliefPropagation\n",
     "from pgmpy.factors.discrete import TabularCPD"
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,17 +99,6 @@
     "    cpd_Lskills = TabularCPD('Lskills', 2, create_OR_table([0.9, 1]).T, ['ALskills', 'Hskills'], evidence_card=2*np.ones(2))\n",
     "    cpd_Hskills = TabularCPD('Hskills', 2, create_OR_table([0.1, 0.9]).T, ['ALskills', 'AHskills'], evidence_card=2*np.ones(2))\n",
     "\n",
-    "    # The tools layer:\n",
-    "    cpd_Aimpacket = TabularCPD('Aimpacket', 2, [[0.5], [0.5]])\n",
-    "    cpd_Aimpacketplus = TabularCPD('AimpacketP', 2, [[ONE], [1-ONE]])\n",
-    "    BAG.add_edge('Aimpacket', 'impacketP')\n",
-    "    BAG.add_edge('Aimpacket', 'impacket')\n",
-    "    BAG.add_edge('AimpacketP', 'impacketP')\n",
-    "    BAG.add_edge('impacketP', 'impacket')\n",
-    "    cpd_impacket = TabularCPD('impacket', 2, create_OR_table([1, 1]).T, ['Aimpacket', 'impacketP'], evidence_card=2*np.ones(2))\n",
-    "    cpd_impacketplus = TabularCPD('impacketP', 2, create_OR_table([0.9, 1]).T, ['Aimpacket', 'AimpacketP'], evidence_card=2*np.ones(2))\n",
-    "    cpd_tools = [TabularCPD(tool, 2, [[0.5], [0.5]]) for tool in ['Metasploit', 'Responder', 'dnscmd.exe', 'certipy']]\n",
-    "\n",
     "\n",
     "    # The knowledge layer:\n",
     "    cpd_knowledge = [TabularCPD(knowledge, 2, [[0.5], [0.5]]) for knowledge in ['Known vulnerabilities', 'CQCM', 'No credentials', 'MITM', 'Permissions move', 'Privilege escalation', 'Lateral move', 'ADCS']]\n",
@@ -127,33 +117,57 @@
     "            node = node[1]\n",
     "            if node['CVE'] != \"null\":\n",
     "                row = kts_dict[node['CVE']]\n",
-    "                if 'impacket' in row['tool'] and row['tool'] != 'impacket':\n",
-    "                    name = 'impacket' + str(id)\n",
-    "                    BAG.add_edge(name, id)\n",
-    "                    BAG.add_edge('impacketP', name)\n",
-    "                    BAG.add_cpds(TabularCPD(name, 2, create_OR_table([0.7]).T, ['impacketP'], evidence_card=2*np.ones(1)))\n",
-    "                elif row['tool'] == 'Unknown':\n",
-    "                    print(row['tool'])\n",
-    "                    name = 'unknown' + str(id)\n",
-    "                    BAG.add_edge(name, id)\n",
-    "                    BAG.add_cpds(TabularCPD(name, 2, [[0.5], [0.5]]))\n",
-    "                else:\n",
-    "                    BAG.add_edge(row['tool'], id)\n",
+    "                build_tools_tree(BAG, Parser(tokenizer(row['tool'])).parse(), id)\n",
     "                BAG.add_edge(row['skills'] + 'skills', id)\n",
     "                BAG.add_edge(row['Type'], id)\n",
     "                parents = BAG.get_parents(id)\n",
     "                BAG.add_cpds(TabularCPD(id, 2, cpt_l4.T, parents, evidence_card=2*np.ones(len(parents))))\n",
     "    # We add all the necessary CPDs to the BAG\n",
-    "    for cpd in [cpd_0skills, cpd_impacketplus, cpd_Lskills, cpd_ALskills, cpd_AHskills, cpd_Hskills, cpd_Aimpacket, cpd_Aimpacketplus, cpd_impacket] + cpd_tools + cpd_knowledge:\n",
+    "    for cpd in [cpd_0skills, cpd_Lskills, cpd_ALskills, cpd_AHskills, cpd_Hskills] + cpd_knowledge:\n",
     "        if BAG.__contains__(cpd.variable):\n",
-    "            BAG.add_cpds(cpd)"
+    "            BAG.add_cpds(cpd)\n",
+    "\n",
+    "def build_tools_tree(BAG, ast, id):\n",
+    "    if ast.type == 'AND':\n",
+    "        BAG.add_edge(ast, id)\n",
+    "        for child in ast.children:\n",
+    "            build_tools_tree(BAG, child, ast)\n",
+    "        if BAG.get_cpds(ast) == None:\n",
+    "            BAG.add_cpds(TabularCPD(ast, 2, create_AND_table([ONE, ONE]).T, ast.children, evidence_card=2*np.ones(len(ast.children))))\n",
+    "    elif ast.type == 'OR':\n",
+    "        BAG.add_edge(ast, id)\n",
+    "        for child in ast.children:\n",
+    "            build_tools_tree(BAG, child, ast)\n",
+    "        if BAG.get_cpds(ast) == None:\n",
+    "            BAG.add_cpds(TabularCPD(ast, 2, [[0.5], [0.5]]))\n",
+    "    else:\n",
+    "        BAG.add_edge(ast, id)\n",
+    "        if BAG.get_cpds(ast) == None:\n",
+    "            BAG.add_cpds(TabularCPD(ast, 2, [[0.5], [0.5]]))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:pgmpy:Replacing existing CPD for 2\n",
+      "WARNING:pgmpy:Replacing existing CPD for 4\n",
+      "WARNING:pgmpy:Replacing existing CPD for 6\n",
+      "WARNING:pgmpy:Replacing existing CPD for 10\n",
+      "WARNING:pgmpy:Replacing existing CPD for 12\n",
+      "WARNING:pgmpy:Replacing existing CPD for 14\n",
+      "WARNING:pgmpy:Replacing existing CPD for 16\n",
+      "WARNING:pgmpy:Replacing existing CPD for 17\n",
+      "WARNING:pgmpy:Replacing existing CPD for 19\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Path to the folder containing the tree\n",
@@ -177,70 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:pgmpy:Replacing existing CPD for 2\n",
-      "WARNING:pgmpy:Replacing existing CPD for 4\n",
-      "WARNING:pgmpy:Replacing existing CPD for 6\n",
-      "WARNING:pgmpy:Replacing existing CPD for 10\n",
-      "WARNING:pgmpy:Replacing existing CPD for 12\n",
-      "WARNING:pgmpy:Replacing existing CPD for 14\n",
-      "WARNING:pgmpy:Replacing existing CPD for 16\n",
-      "WARNING:pgmpy:Replacing existing CPD for 17\n",
-      "WARNING:pgmpy:Replacing existing CPD for 19\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Unknown\n",
-      "Unknown\n",
-      "Unknown\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BayesianNetwork with 39 nodes and 57 edges\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\factors\\discrete\\DiscreteFactor.py:796: RuntimeWarning: invalid value encountered in divide\n",
-      "  phi.values = phi.values / phi1.values\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "BayesianNetwork with 43 nodes and 55 edges\n",
       "BayesianNetwork with 19 nodes and 20 edges\n"
      ]
     }
@@ -264,26 +222,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+------+----------------------+---------------------+\n",
-      "| 2    | 2(0)                 | 2(1)                |\n",
-      "+------+----------------------+---------------------+\n",
-      "| 1(0) | 0.99                 | 0.19999999999999996 |\n",
-      "+------+----------------------+---------------------+\n",
-      "| 1(1) | 0.010000000000000009 | 0.8                 |\n",
-      "+------+----------------------+---------------------+\n"
+     "ename": "ValueError",
+     "evalue": "Node not present in the Directed Graph",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[59], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# tab = BeliefPropagation(BAG).query(['Impacket'], evidence=evidence)\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mBAG\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_cpds\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mImpacket\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m)\n",
+      "File \u001b[1;32mc:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\models\\BayesianNetwork.py:297\u001b[0m, in \u001b[0;36mBayesianNetwork.get_cpds\u001b[1;34m(self, node)\u001b[0m\n\u001b[0;32m    295\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m node \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    296\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m node \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnodes():\n\u001b[1;32m--> 297\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNode not present in the Directed Graph\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    298\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    299\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m cpd \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcpds:\n",
+      "\u001b[1;31mValueError\u001b[0m: Node not present in the Directed Graph"
      ]
     }
    ],
    "source": [
-    "tab = BeliefPropagation(BAG).query(['impacketP'], evidence=evidence)\n",
-    "print(BAG.get_cpds(1))"
+    "# tab = BeliefPropagation(BAG).query(['Impacket'], evidence=evidence)\n",
+    "print(BAG.get_cpds('Impacket'))"
    ]
   }
  ],
